<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto">
    <EditTextPreference
        app:key="userName"
        app:title="@string/username"/>

    <com.thethreewisemen.pwass.objects.CustomPrefCat app:title="@string/appTheme">
        <SwitchPreference
            app:key="customTheme"
            app:title="@string/customTheme"
            />
        <com.thethreewisemen.pwass.objects.CustomPrefCat
            app:key="colorCat">
            <com.thethreewisemen.pwass.objects.ColorPreference
                app:key="colorPrimary"
                app:title="@string/colorPrimary"
                app:layout="@layout/color_preference"
                />
            <com.thethreewisemen.pwass.objects.ColorPreference
                app:key="colorSec"
                app:title="@string/colorSec"
                app:layout="@layout/color_preference"
                />
            <com.thethreewisemen.pwass.objects.ColorPreference
                app:key="colorBack"
                app:title="@string/colorBack"
                app:layout="@layout/color_preference"
                />
            <com.thethreewisemen.pwass.objects.ColorPreference
                app:key="colorPost"
                app:title="@string/colorPost"
                app:layout="@layout/color_preference"
                />

        </com.thethreewisemen.pwass.objects.CustomPrefCat>

        <com.thethreewisemen.pwass.objects.ButtonPreference
            app:key="applyTheme"
            app:layout="@layout/button_preference"/>

    </com.thethreewisemen.pwass.objects.CustomPrefCat>

</PreferenceScreen>