<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".fragments.AddPostFragment">


    <EditText
        android:id="@+id/addPostTitelEt"
        android:layout_width="315dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:gravity="center_horizontal"
        android:hint="@string/Titlepost"
        android:textAlignment="center"
        android:textSize="@dimen/text_size"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.074" />


    <EditText
        android:id="@+id/addPostUsername"
        android:background="@android:color/transparent"
        android:layout_width="wrap_content"
        android:minWidth="130dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:hint="@string/username"
        android:gravity="center_horizontal"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.17"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <EditText
        android:id="@+id/addPostBesEt"
        android:layout_width="315dp"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:hint="Add caption"
        android:textColorHint="#78909C"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/addPostTitelEt"
        app:layout_constraintVertical_bias="0.001" />


    <Button
        android:id="@+id/addPostUploadBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Uploadfoto"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintTop_toBottomOf="@+id/addPostBesEt" />

</androidx.constraintlayout.widget.ConstraintLayout>